-Fix resume page on smaller screens.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -21,7 +21,7 @@ body {
 }
 
 header {
-  position: fixed;
+  position: absolute;
   top: 0px;
   left: 40px;
   right: 40px;
@@ -33,8 +33,7 @@ header {
 }
 
 main {
-  background-color: #f8f8f8;
-  position: fixed;
+  position: absolute;
   min-height: 500px;
   top: 40px;
   left: 40px;
@@ -286,7 +285,7 @@ h5 {
   color: #05386B;
   text-rendering: optimizeLegibility;
   font-size: 0.8rem;
-  line-height: 1.1;
+  line-height: 1.2;
 }
 h6 {
   margin-left: 0;
@@ -695,6 +694,13 @@ li.resume {
   margin-bottom: 40px;
 }
 
+.resume_item_title {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 #menu_btns {
   height: 200px;
   display: flex;
@@ -715,16 +721,15 @@ li.resume {
 }
 
 #resume_container {
+  background-color: #f8f8f8;
   width: 750px;
+  position: relative;
+  overflow: auto;
+}
+
+#resume_content {
   margin-left: 20px;
   margin-right: 20px;
-  margin-bottom: 20px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  overflow: auto;
 }
 
 #portrait {
@@ -735,20 +740,19 @@ li.resume {
 
 #resume_title {
   position: sticky;
-  left: 0;
-  right: 0;
+  position: -webkit-sticky;
   height: 50px;
   background-color: #f8f8f8;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
 }
 
 #resume_name {
   font-size: 1.75rem;
   text-decoration: none;
+  margin-left: 10px;
 }
 
 #download_btn {
@@ -843,6 +847,12 @@ li.resume {
     align-items: center;
   }
 
+  .resume_item_title {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
   #home_container {
     flex: 1;
     width: 100%;
@@ -855,7 +865,7 @@ li.resume {
 
   #resume_container {
     flex: 1;
-    width: 95%;
+    width: 100%;
     align-self: center;
   }
 
@@ -881,6 +891,14 @@ li.resume {
     font-size: 1.25rem;
   }
 
+  h5 {
+    font-size: 0.75rem;
+  }
+
+  li.resume {
+    text-align: left;
+  }
+
   .menu_open {
     bottom: 0px;
     width: 250px;
@@ -897,6 +915,10 @@ li.resume {
 
   .home_page_content {
     width: 85%;
+  }
+
+  #resume_title {
+    height: 60px;
   }
 
   #portrait {
